--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,20 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "ng serve",
-      "type": "pwa-chrome",
-      "request": "launch",
-      "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
-    }
+  {
+    "name": "Launch Chrome",
+    "request": "launch",
+    "type": "chrome",
+    "url": "http://localhost:8080",
+    "webRoot": "${workspaceFolder}"
+   }
+  //,
+  //   {
+  //     "name": "ng serve",
+  //     "type": "pwa-chrome",
+  //     "request": "launch",
+  //     "preLaunchTask": "npm: start",
+  //     "url": "http://localhost:4200/"
+  //   }
   ]
 }
