--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "enableIvy": true,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": false,
     "strictInputAccessModifiers": false,
